--- a/main.ipynb
+++ b/main.ipynb
@@ -4,14 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Abdollah Ebadi 202380535"
+    "## Abdollah Ebadi 202380535\n",
+    "## Keyvan Booshehri 202380539"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/09/5wnvp95d303gq_7sp7byf8n00000gn/T/ipykernel_13097/3613175516.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +414,7 @@
        "[5147 rows x 19 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,13 +426,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5148e3b882ae47a39bd3d21ea504573a",
+       "model_id": "adb1abc5b72b4fff883efac47b9a9ee0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -503,10 +519,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eebce38696a3416f95ca45fd8f54182c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='VisitType', options=('Occupational Therapist Visit', 'Speech Patho…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#plot 2\n",
+    "@interact(VisitType=(['Occupational Therapist Visit', 'Speech Pathologist Visit', 'Physiotherapist Visit','Dietitian Visit','Social Worker Visit','Cardiologist Visit','Neurologist Visit']),comorbidities=True,)\n",
+    "def f1(VisitType,comorbidities): \n",
+    "    fig, ax = plt.subplots()\n",
+    "    main_df2 = pd.read_csv(\"stroke.csv\")\n",
+    "    main_df2=main_df2[main_df2['Comorbidities']==comorbidities]\n",
+    "    main_df2=main_df2.groupby(\"Gender\").size().reset_index()\n",
+    "    total_f=main_df2[0][0]\n",
+    "    total_m=main_df2[0][1]\n",
+    "    total=total_m+total_f\n",
+    "    main_df3 = pd.read_csv(\"stroke.csv\")\n",
+    "    main_df3=main_df3[main_df3['Comorbidities']==comorbidities]\n",
+    "    main_df3 = main_df3.dropna(subset=[VisitType])\n",
+    "    main_df3=main_df3.groupby(\"Gender\").size().reset_index()\n",
+    "    ax.pie([main_df3[0][0]/total,main_df3[0][1]/total,(total-main_df3[0][0]-main_df3[0][1])/total],labels=['female','male','no visit'],autopct='%1.1f%%')\n",
+    "    plt.title('Distribution of visitis based on specialization')"
+   ]
   }
  ],
  "metadata": {
@@ -525,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
