--- a/main.ipynb
+++ b/main.ipynb
@@ -519,13 +519,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eebce38696a3416f95ca45fd8f54182c",
+       "model_id": "bc9fcb93be9f4ab4a03739b79daa395d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -553,7 +553,63 @@
     "    main_df3 = main_df3.dropna(subset=[VisitType])\n",
     "    main_df3=main_df3.groupby(\"Gender\").size().reset_index()\n",
     "    ax.pie([main_df3[0][0]/total,main_df3[0][1]/total,(total-main_df3[0][0]-main_df3[0][1])/total],labels=['female','male','no visit'],autopct='%1.1f%%')\n",
-    "    plt.title('Distribution of visitis based on specialization')"
+    "    plt.title('Distribution of visitis based on specialization and comorbidities')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "14a58d6ea15d4d3ba3067d5fb4c06b73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='', description='AgeStart'), Text(value='', description='AgeEnd'), Dropdown(d…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "@interact(AgeStart=\"\",AgeEnd=\"\",Gender=[\"Male\",\"Female\",\"All\"])\n",
+    "def f1(AgeStart,AgeEnd,Gender):\n",
+    "    main_df4 = pd.read_csv(\"stroke.csv\")\n",
+    "    main_df4\n",
+    "    main_df5 = pd.read_csv(\"stroke.csv\")\n",
+    "    main_df5\n",
+    "    if AgeStart != \"\":\n",
+    "        AgeStart=int(AgeStart)\n",
+    "        main_df5=main_df5[main_df5['Age']>=AgeStart]\n",
+    "        main_df4=main_df4[main_df4['Age']>=AgeStart]\n",
+    "    if AgeEnd != \"\":\n",
+    "        AgeEnd=int(AgeEnd)\n",
+    "        main_df5=main_df5[main_df5['Age']<=AgeEnd]\n",
+    "        main_df4=main_df4[main_df4['Age']<=AgeEnd]\n",
+    "\n",
+    "    if Gender==\"Male\":\n",
+    "        main_df5=main_df5[main_df5['Gender']=='M']\n",
+    "        main_df4=main_df4[main_df4['Gender']=='M']\n",
+    "    if Gender==\"Female\":\n",
+    "        main_df5=main_df5[main_df5['Gender']=='F']\n",
+    "        main_df4=main_df4[main_df4['Gender']=='F'] \n",
+    "    main_df5=main_df5[main_df5['Comorbidities']==True]\n",
+    "    main_df4=main_df4[main_df4['Comorbidities']==False] \n",
+    "    fig, ax = plt.subplots()\n",
+    "    main_df4=main_df4.groupby([\"Age\"],observed=False).size().to_frame('freq',).reset_index()\n",
+    "    main_df5=main_df5.groupby([\"Age\"],observed=False).size().to_frame('freq',).reset_index()\n",
+    "    ax.plot(main_df4['Age'],main_df4['freq'],color='blue',label=\"Without Comorbidities\")\n",
+    "    ax.plot(main_df5['Age'],main_df5['freq'],color='red',label=\"With Comorbidities\")\n",
+    "    plt.xlabel('Age')\n",
+    "    plt.ylabel('Visits')\n",
+    "    plt.title('Visits Based on Age')\n",
+    "    ax.legend(title='Comorbidities')"
    ]
   }
  ],
