--- a/main.ipynb
+++ b/main.ipynb
@@ -10,24 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/09/5wnvp95d303gq_7sp7byf8n00000gn/T/ipykernel_13097/3613175516.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +399,7 @@
        "[5147 rows x 19 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,13 +411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adb1abc5b72b4fff883efac47b9a9ee0",
+       "model_id": "ea910d81c9e34500be2db88c38a5f398",
        "version_major": 2,
        "version_minor": 0
       },
@@ -519,13 +504,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc9fcb93be9f4ab4a03739b79daa395d",
+       "model_id": "bf6fff6c72644cde99621b483d235744",
        "version_major": 2,
        "version_minor": 0
       },
@@ -558,18 +543,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14a58d6ea15d4d3ba3067d5fb4c06b73",
+       "model_id": "d92a7274d5f24053a9d1c94dedfdd4fb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Text(value='', description='AgeStart'), Text(value='', description='AgeEnd'), Dropdown(d…"
+       "interactive(children=(Text(value='30', description='AgeStart'), Text(value='50', description='AgeEnd'), Dropdo…"
       ]
      },
      "metadata": {},
@@ -578,7 +563,7 @@
    ],
    "source": [
     "\n",
-    "@interact(AgeStart=\"\",AgeEnd=\"\",Gender=[\"Male\",\"Female\",\"All\"])\n",
+    "@interact(AgeStart=\"30\",AgeEnd=\"50\",Gender=[\"All\",\"Male\",\"Female\"])\n",
     "def f1(AgeStart,AgeEnd,Gender):\n",
     "    main_df4 = pd.read_csv(\"stroke.csv\")\n",
     "    main_df4\n",
@@ -610,6 +595,61 @@
     "    plt.ylabel('Visits')\n",
     "    plt.title('Visits Based on Age')\n",
     "    ax.legend(title='Comorbidities')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "14c01aba2d6745b099480c32c16d25ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Gender', options=('All', 'Men', 'Women'), value='All'), Checkbox(v…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#plot 4\n",
+    "@interact(Gender=(['All', 'Men', 'Women']),ICU=False,TPA=False)\n",
+    "def f1(Gender,ICU,TPA): \n",
+    "\tmain_df5 = pd.read_csv(\"stroke.csv\")\n",
+    "\tfig, ax = plt.subplots()\n",
+    "\tif Gender==\"Men\":\n",
+    "\t\tmain_df5=main_df5[main_df5['Gender']=='M']\n",
+    "\tif Gender==\"Women\":\n",
+    "\t\tmain_df5=main_df5[main_df5['Gender']=='F']\n",
+    "\n",
+    "\tif TPA is True:\n",
+    "\t\tmain_df5 = main_df5.dropna(subset=['TPA Time'])\n",
+    "\tif ICU is True:\n",
+    "\t\tmain_df5 = main_df5.dropna(subset=['ICU Arrival Time','ICU Checkout Time'])\n",
+    "\n",
+    "\n",
+    "\tmain_df5['Admission Time'] = pd.to_datetime(main_df5['Admission Time'])\n",
+    "\tmain_df5['Discharge Time'] = pd.to_datetime(main_df5['Discharge Time'])\n",
+    "\tmain_df5['Emergency Dept Time'] = pd.to_datetime(main_df5['Emergency Dept Time'])\n",
+    "\n",
+    "\tmain_df5['Hosp_Time'] = -(main_df5['Admission Time'] - main_df5['Discharge Time']).dt.total_seconds() / 3600\n",
+    "\tmain_df5['Wait_Time'] = -(main_df5['Emergency Dept Time'] - main_df5['Admission Time']).dt.total_seconds() / 3600\n",
+    "\n",
+    "\t# Fill NaN values with 0\n",
+    "\tmain_df5['Hosp_Time'] = main_df5['Hosp_Time'].fillna(0)\n",
+    "\tmain_df5['Wait_Time'] = main_df5['Wait_Time'].fillna(0)\n",
+    "\n",
+    "\tax.scatter(main_df5['Hosp_Time'],main_df5['Wait_Time'],s=1)\n",
+    "\tplt.xlabel('Length of stay (hours)')\n",
+    "\tplt.ylabel('Waiting time (hours)')\n",
+    "\tplt.title('Distribution of waiting time and stay time')\n",
+    "\tplt.show()"
    ]
   }
  ],
