changed bar colors

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "[5147 rows x 19 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,13 +411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea910d81c9e34500be2db88c38a5f398",
+       "model_id": "7bac7d2699cf451a95dbb9a9747579c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -446,7 +446,7 @@
     "        # Calculate average ICU time for each age decade category\n",
     "        average_icu_time = df1.groupby('age_category', observed=False)['Avg_ICU_Time'].mean()\n",
     "        age_categories = [f\"{int(cat.left)} - {int(cat.right) - 1}\" for cat in average_icu_time.index]\n",
-    "        ax.bar(x=age_categories, height=average_icu_time.values)\n",
+    "        ax.bar(x=age_categories, height=average_icu_time.values, color=\"#15803d\")\n",
     "        plt.xlabel('Age')\n",
     "        plt.ylabel('Average Time in ICU (hours)')\n",
     "        plt.title('Average Time in ICU by Age Decade')\n",
@@ -469,7 +469,7 @@
     "        male_grouped_data = male_data.groupby('age_category', observed=False)['Avg_ICU_Time'].mean()\n",
     "        # Define custom tick labels\n",
     "        age_categories2 = [f\"{int(cat.left)} - {int(cat.right) - 1}\" for cat in male_grouped_data.index]\n",
-    "        ax.bar(x=age_categories2, height=male_grouped_data.values)\n",
+    "        ax.bar(x=age_categories2, height=male_grouped_data.values, color=\"#0891b2\")\n",
     "        plt.xlabel('Age')\n",
     "        plt.ylabel('Average Time in ICU (hours)')\n",
     "        plt.title('Average Time in ICU by Age Decade')\n",
@@ -491,7 +491,7 @@
     "        female_grouped_data = female_data.groupby('age_category', observed=False)['Avg_ICU_Time'].mean()\n",
     "        # Define custom tick labels\n",
     "        age_categories3 = [f\"{int(cat.left)} - {int(cat.right) - 1}\" for cat in female_grouped_data.index]\n",
-    "        ax.bar(x=age_categories3, height=female_grouped_data.values)\n",
+    "        ax.bar(x=age_categories3, height=female_grouped_data.values, color=\"#7e22ce\")\n",
     "        plt.xlabel('Age')\n",
     "        plt.ylabel('Average Time in ICU (hours)')\n",
     "        plt.title('Average Time in ICU by Age Decade')\n",
@@ -504,13 +504,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf6fff6c72644cde99621b483d235744",
+       "model_id": "7cc521bb034c48ff87a617f9f584d5dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,13 +543,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d92a7274d5f24053a9d1c94dedfdd4fb",
+       "model_id": "4dd7d00260f6425d922808722552b4c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -599,13 +599,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14c01aba2d6745b099480c32c16d25ca",
+       "model_id": "092aaa7df01c499eb99a273f5b8c668f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
