--- a/main.ipynb
+++ b/main.ipynb
@@ -405,8 +405,7 @@
     }
    ],
    "source": [
-    "main_df = pd.read_csv(\"stroke.csv\")\n",
-    "main_df"
+    "main_df = pd.read_csv(\"stroke.csv\")"
    ]
   },
   {
@@ -448,8 +447,8 @@
     "        age_categories = [f\"{int(cat.left)} - {int(cat.right) - 1}\" for cat in average_icu_time.index]\n",
     "        ax.bar(x=age_categories, height=average_icu_time.values, color=\"#15803d\")\n",
     "        plt.xlabel('Age')\n",
-    "        plt.ylabel('Average Time in ICU (hours)')\n",
-    "        plt.title('Average Time in ICU by Age Decade')\n",
+    "        plt.ylabel('Average ICU Time (hours)')\n",
+    "        plt.title('Average ICU Time by Age Decade')\n",
     "        plt.xticks(rotation=45)\n",
     "        plt.grid(False)\n",
     "        plt.show()\n",
@@ -471,8 +470,8 @@
     "        age_categories2 = [f\"{int(cat.left)} - {int(cat.right) - 1}\" for cat in male_grouped_data.index]\n",
     "        ax.bar(x=age_categories2, height=male_grouped_data.values, color=\"#0891b2\")\n",
     "        plt.xlabel('Age')\n",
-    "        plt.ylabel('Average Time in ICU (hours)')\n",
-    "        plt.title('Average Time in ICU by Age Decade')\n",
+    "        plt.ylabel('Average ICU Time (hours)')\n",
+    "        plt.title('Average ICU Time by Age Decade')\n",
     "        plt.xticks(rotation=45)\n",
     "        plt.grid(False)\n",
     "        plt.show()\n",
@@ -493,8 +492,8 @@
     "        age_categories3 = [f\"{int(cat.left)} - {int(cat.right) - 1}\" for cat in female_grouped_data.index]\n",
     "        ax.bar(x=age_categories3, height=female_grouped_data.values, color=\"#7e22ce\")\n",
     "        plt.xlabel('Age')\n",
-    "        plt.ylabel('Average Time in ICU (hours)')\n",
-    "        plt.title('Average Time in ICU by Age Decade')\n",
+    "        plt.ylabel('Average ICU Time (hours)')\n",
+    "        plt.title('Average ICU Time by Age Decade')\n",
     "        plt.xticks(rotation=45)\n",
     "        plt.grid(False)\n",
     "        plt.show()\n",
